fix login form allignment issue on safari
svn path=/plumi.skin/trunk/; revision=228971

--- a/plumi/skin/browser/stylesheets/plumi.css
+++ b/plumi/skin/browser/stylesheets/plumi.css
@@ -698,7 +698,7 @@ height:150px;
 }
 
 #login-form {
-    width: 20em;
+    width: 18em;
 }
 
 #portal-languageselector {
